2006-12-28  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/webservice/xml/two_frames.xml: 
	* projects/core/img/console_webserviceadmin.gif: 
	* projects/core/img/console_webservicemonitor.gif: 
	* projects/core/xsl/utils.xsl: 
	Redesigned links for webservice console using icons now.

2006-12-21  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/ImageGeometry.java: 
	* projects/core/xsl/forminput.xsl: 
	* projects/core/xsl/include.xsl: 
	Use CSS style attribute instead of width/height attribute to be compatible
	with W3C's HTML specifications for <input type="image" .../> tag.
	
	* src/de/schlund/pfixxml/config/includes/IncludesResolver.java (resolveIncludes): 
	Fixed typo causing "refid" not to work.

2006-12-15  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/ServletManager.java (doGet): 
	Added explicit support for P3P header.
	
	* projects/core/xsl/include.xsl: 
	* projects/core/xsl/utils.xsl: 
	* projects/testsuite/conf/depend.xml: 
	* projects/core/img/console_*.gif: 
	Improved HTML conformity and redesigned pfx:editconsole 

2006-12-13  Martin Leidig  <mleidig@schlund.de>

	Added new AJAX JS stub callback mechanism. Now you can pass an object to 
	the webservice constructor and the webservice will automatically call back
	object methods of the same name.

	* src/de/schlund/pfixcore/webservice/generate/Wsdl2Js.java: generate JS stub
	constructors with optional callback object argument
	* src/de/schlund/pfixcore/webservice/generate/js/JsClass.java: added support
	to generate JS stub constructors with arguments
	* src/de/schlund/pfixcore/example/webservices/CallTest.java: added test 
	webservice to test all webservice call variants 
	* src/de/schlund/pfixcore/example/webservices/CallTestImpl.java: added
	CallTest service implementation
	* projects/core/script/webservice.js: added object callback mechanism
	
	Added webservice example application page to test all webservice call